<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Toolbar-->
    <android.support.design.widget.AppBarLayout
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="?colorPrimary"
            android:layout_width="fill_parent"
            android:layout_height="?actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <!--Title-->
    <TextView
        android:id="@+id/title"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="@dimen/title_size"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/title_margin"/>

    <!--Layout to center buttons from below the title-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <!--Buttons Layout-->
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/buttons_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button android:id="@+id/button"
                    android:background="@drawable/button_bg"
                    android:padding="@dimen/button_padding"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:layout_marginTop="?actionBarSize"
                    android:text="@string/button_text"/>

                <Button android:id="@+id/button2"
                    android:background="@drawable/button_bg"
                    android:padding="@dimen/button_padding"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/button2_text"/>

                <Button android:id="@+id/button3"
                    android:background="@drawable/button_bg"
                    android:padding="@dimen/button_padding"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/button3_text"/>

                <Button android:id="@+id/button4"
                    android:background="@drawable/button_bg"
                    android:padding="@dimen/button_padding"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/button4_text"/>

                <Button android:id="@+id/button5"
                    android:background="@drawable/button_bg"
                    android:padding="@dimen/button_padding"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/button5_text"/>

                <Button android:id="@+id/button6"
                    android:background="@drawable/button_bg"
                    android:padding="@dimen/button_padding"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/button6_text"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>